[gd_scene load_steps=6 format=2]

[ext_resource path="res://PlayerSprite.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Sprites/robot.png" type="Texture" id=2]
[ext_resource path="res://Checkpoint.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64, 64 )

[sub_resource type="Animation" id=2]
resource_name = "furnish"
tracks/0/type = "value"
tracks/0/path = NodePath("MecanicArm:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -6.10352e-05, -51.5691 ), Vector2( -6.10352e-05, 135.431 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("PlayerSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -19.6202, -9.05164 ), Vector2( -19.62, 177.193 ) ]
}

[node name="Checkpoint" type="Node2D" groups=[
"checkpoint_listener",
]]
script = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Position2D" type="Position2D" parent="."]

[node name="CheckpointArea" type="Area2D" parent="."]
position = Vector2( -16, 176 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="CheckpointArea"]
shape = SubResource( 1 )

[node name="Sprites" type="StaticBody2D" parent="."]
collision_layer = 3

[node name="PlayerSprite" parent="Sprites" instance=ExtResource( 1 )]
position = Vector2( -19.6202, -9.05164 )

[node name="MecanicArm" type="Sprite" parent="Sprites"]
position = Vector2( -6.10352e-05, -51.5691 )
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 94.8628, 161.359, 17.5193, 44.3823 )

[node name="InactiveSprites2" type="Sprite" parent="Sprites"]
scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 16, 48, 48 )

[node name="InactiveSprites" type="Node2D" parent="Sprites"]
visible = false
scale = Vector2( 3, 3 )

[node name="Sprite" type="Sprite" parent="Sprites/InactiveSprites"]
position = Vector2( -16, -32 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 32, 96, 16, 16 )

[node name="Sprite2" type="Sprite" parent="Sprites/InactiveSprites"]
position = Vector2( 0, -32 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 32, 96, 16, 16 )

[node name="Sprite3" type="Sprite" parent="Sprites/InactiveSprites"]
position = Vector2( 16, -32 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 32, 96, 16, 16 )

[node name="Sprite4" type="Sprite" parent="Sprites/InactiveSprites"]
position = Vector2( 32, -16 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 96, 96, 16, 16 )

[node name="Sprite5" type="Sprite" parent="Sprites/InactiveSprites"]
position = Vector2( 32, -5.96046e-08 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 96, 96, 16, 16 )

[node name="Sprite6" type="Sprite" parent="Sprites/InactiveSprites"]
position = Vector2( 32, 16 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 96, 96, 16, 16 )

[node name="Sprite7" type="Sprite" parent="Sprites/InactiveSprites"]
position = Vector2( -32, -16 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 96, 16, 16 )

[node name="Sprite8" type="Sprite" parent="Sprites/InactiveSprites"]
position = Vector2( -32, -5.96046e-08 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 96, 16, 16 )

[node name="Sprite9" type="Sprite" parent="Sprites/InactiveSprites"]
position = Vector2( -32, 16 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 96, 16, 16 )

[node name="Sprite10" type="Sprite" parent="Sprites/InactiveSprites"]
position = Vector2( -32, -32 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 144, 96, 16, 16 )

[node name="Sprite11" type="Sprite" parent="Sprites/InactiveSprites"]
position = Vector2( 32, -32 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 144, 96, 16, 16 )

[node name="InactiveComputer" type="Sprite" parent="Sprites/InactiveSprites"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 160, 167, 16, 17 )

[node name="ActiveSprites" type="Node2D" parent="Sprites"]
scale = Vector2( 3, 3 )

[node name="ActiveComputer" type="Sprite" parent="Sprites/ActiveSprites"]
position = Vector2( -3.8147e-06, 0 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 176, 167, 16, 17 )

[node name="Sprite" type="Sprite" parent="Sprites/ActiveSprites"]
position = Vector2( -16, -32 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 64, 96, 16, 16 )

[node name="Sprite2" type="Sprite" parent="Sprites/ActiveSprites"]
position = Vector2( -1.13687e-13, -32 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 64, 96, 16, 16 )

[node name="Sprite3" type="Sprite" parent="Sprites/ActiveSprites"]
position = Vector2( 16, -32 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 64, 96, 16, 16 )

[node name="Sprite4" type="Sprite" parent="Sprites/ActiveSprites"]
position = Vector2( 32, -16 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 96, 112, 16, 16 )

[node name="Sprite5" type="Sprite" parent="Sprites/ActiveSprites"]
position = Vector2( 32, -1.20371e-35 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 96, 112, 16, 16 )

[node name="Sprite6" type="Sprite" parent="Sprites/ActiveSprites"]
position = Vector2( 32, 16 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 96, 112, 16, 16 )

[node name="Sprite7" type="Sprite" parent="Sprites/ActiveSprites"]
position = Vector2( -32, -16 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 112, 16, 16 )

[node name="Sprite8" type="Sprite" parent="Sprites/ActiveSprites"]
position = Vector2( -32, -3.38813e-21 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 112, 16, 16 )

[node name="Sprite9" type="Sprite" parent="Sprites/ActiveSprites"]
position = Vector2( -32, 16 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 80, 112, 16, 16 )

[node name="Sprite10" type="Sprite" parent="Sprites/ActiveSprites"]
position = Vector2( -32, -32 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 112, 96, 16, 16 )

[node name="Sprite11" type="Sprite" parent="Sprites/ActiveSprites"]
position = Vector2( 32, -32 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 112, 96, 16, 16 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprites"]
anims/furnish = SubResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprites"]
visible = false
polygon = PoolVector2Array( -108.892, -120.162, -108.892, 71.8378, 131.108, 71.8378, 131.108, -120.162, -100.892, -120.162, -92.8923, -96.1622, 83.1077, -88.1622, 83.1077, 47.8378, -92.8923, 47.8378, -92.8923, -72.1622 )

[node name="ActivateAudio" type="AudioStreamPlayer2D" parent="."]

[node name="FurnishAudio" type="AudioStreamPlayer2D" parent="."]

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="."]
[connection signal="body_entered" from="CheckpointArea" to="." method="_on_CheckpointArea_body_entered"]
